# animal-register

./: LICENSE  README.md
ant_observations/: .env  Cargo.toml  requests.http
ant_observations/src/: config.rs  lib.rs  main.rs
ant_observations/src/handlers/: country_handler.rs  department_handler.rs  family_handler.rs  generic_handler.rs  genus_handler.rs  locality_handler.rs  mod.rs  observation_handler.rs  observations_handler.rs  province_handler.rs  species_handler.rs  subfamily_handler.rs  tribe_handler.rs
ant_observations/src/handlers/collection/: mod.rs  preservation_method_handler.rs  trap_handler.rs
ant_observations/src/handlers/geographic/: country_handler.rs  department_handler.rs  locality_handler.rs  mod.rs  province_handler.rs
ant_observations/src/handlers/observation/: mod.rs  observation_handler.rs
ant_observations/src/handlers/person/: mod.rs  person_handler.rs  role_handler.rs
ant_observations/src/handlers/taxonomic/: family_handler.rs  genus_handler.rs  species_handler.rs  subfamily_handler.rs  tribe_handler.rs
ant_observations/src/models/: department.rs  family.rs  genus.rs  locality.rs  mod.rs  observation.rs  province.rs  species.rs  subfamily.rs  tribe.rs
ant_observations/src/models/collection/: mod.rs  preservation_method.rs  trap.rs
ant_observations/src/models/geographic/: country.rs  location.rs  mod.rs
ant_observations/src/routes/: countries.rs  departments.rs  families.rs  family.rs  genera.rs  localities.rs  mod.rs  observations.rs  provinces.rs  species.rs  subfamilies.rs  tribes.rs
front_application/: package-lock.json  (+1 more)
(+52 files in other folders)
