[package]
name = "ant_observations"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
dotenv = "0.15"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "chrono"] }