[package]
name = "ant_observations"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-files = "0.6.6"
dotenv = "0.15"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.22"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"]}
csv = "1.3.0"